removed duplicate CSS

--- a/sf-droplets/index.html
+++ b/sf-droplets/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Skills Forward Droplets</title>
+    <link href="css/droplets.css" rel="stylesheet" media="all" />
     <link href="css/sf-droplets.css" rel="stylesheet" media="all" />
-    <script src="script/sf-droplets.js" defer></script>
+    <script src="script/droplets.js" defer></script>
 </head>
 
 <body>
