--- a/sf-droplets/module.html
+++ b/sf-droplets/module.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Skills Forward Droplets</title>
+    <link href="css/droplets.css" rel="stylesheet" media="all" />
     <link href="css/sf-droplets.css" rel="stylesheet" media="all" />
-    <script src="script/sf-droplets.js" defer></script>
+    <script src="script/droplets.js" defer></script>
 </head>
 
 <body>
@@ -13,10 +14,17 @@
     <!-- Required Wrapper -->
     <div id="sf-droplets-wrapper">
 
+        <div id="sf-droplets-header" class="simple">
+            <h2 class="decortive-header">
+                <span class="icon icon-discussion">&nbsp;</span>
+                Discussion
+            </h2>
+        </div>
+
         <!-- Body Content -->
         <div id="uws-droplets-page">
 
-            <h2 class="embellish">Introduciton</h2>
+            <!-- <h2 class="embellish">Introduciton</h2> -->
 
             <figure class="right shadowed" style="margin-top: 0;"><img id="49529998" style="display: block; margin-left: auto; margin-right: auto;" role="presentation" src="https://uws.instructure.com/courses/531278/files/49529998/preview" alt="" width="266" height="177" data-api-endpoint="https://uws.instructure.com/api/v1/courses/531278/files/49529998" data-api-returntype="File" /></figure>
 
@@ -49,7 +57,7 @@
             <div class="droplets-list">
 
                 <div class="item">
-                    <div class="icon"><span class="icon icon-video">&nbsp;</span></div>
+                    <div class="icon"><span class="sf-icon-linkedin">&nbsp;</span></div>
                     <div class="content">
                         <p>Watch <a href="#">Odio Pellentesque diam volutpat commodo</a> (35 min)</p>
                         <p><em>Sapien eget mi proin sed libero enim sed faucibus. Sed turpis tincidunt id aliquet risus. Convallis posuere morbi leo urna. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sed ullamcorper morbi tincidunt ornare massa eget. Elit eget gravida cum sociis natoque penatibus et.</em></p>
@@ -57,7 +65,7 @@
                 </div>
 
                 <div class="item">
-                    <div class="icon"><span class="icon icon-video">&nbsp;</span></div>
+                    <div class="icon"><span class="sf-icon-linkedin">&nbsp;</span></div>
                     <div class="content">
                         <p>Watch <a href="#">Odio Pellentesque diam volutpat commodo</a> (50 min)</p>
                         <p><em>Sapien eget mi proin sed libero enim sed faucibus. Sed turpis tincidunt id aliquet risus. Convallis posuere morbi leo urna. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sed ullamcorper morbi tincidunt ornare massa eget. Elit eget gravida cum sociis natoque penatibus et.</em></p>
@@ -76,13 +84,12 @@
 
             <h2 class="embellish">Activities</h2>
 
-            <div class="droplets-list">
+            <!-- <div class="droplets-list">
 
                 <div class="item">
                     <div class="icon"><span class="icon icon-assessment">&nbsp;</span></div>
                     <div class="content">
                         <p>Complete the <a href="#">Skill Builder: Ipsum Lorem Diam Doh</a> quiz</p>
-                        <p><em>Sapien eget mi proin sed libero enim sed faucibus. Sed turpis tincidunt id aliquet risus. Convallis posuere morbi leo urna. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sed ullamcorper morbi tincidunt ornare massa eget. Elit eget gravida cum sociis natoque penatibus et.</em></p>
                     </div>
                 </div>
 
@@ -90,11 +97,14 @@
                     <div class="icon"><span class="icon icon-discussion">&nbsp;</span></div>
                     <div class="content">
                         <p>Complete the <a href="#">Peer Perspective: Ipsum Lorem Diam Doh</a> discussion</p>
-                        <p><em>Sapien eget mi proin sed libero enim sed faucibus. Sed turpis tincidunt id aliquet risus. Convallis posuere morbi leo urna. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sed ullamcorper morbi tincidunt ornare massa eget. Elit eget gravida cum sociis natoque penatibus et.</em></p>
                     </div>
                 </div>
 
-            </div>
+            </div> -->
+
+            <p><span class="icon-assessment medium">&nbsp;</span> Complete the <a href="#">Skill Builder: Ipsum Lorem Diam Doh</a> quiz</p>
+
+            <p><span class="icon-discussion medium">&nbsp;</span> Complete the <a href="#">Peer Perspective: Ipsum Lorem Diam Doh</a> discussion</p>
 
             <p><a href="index.html">&lt; Home</a> | <a href="module.html">Module &gt;</a></p>
         
