--- a/sf-droplets/index.html
+++ b/sf-droplets/index.html
@@ -7,6 +7,12 @@
     <link href="css/droplets.css" rel="stylesheet" media="all" />
     <link href="css/sf-droplets.css" rel="stylesheet" media="all" />
     <script src="script/droplets.js" defer></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
